--- a/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
+++ b/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
@@ -4,7 +4,7 @@
       direction: ltr;
       mask-image: linear-gradient(to left, transparent, black var(--tab-label-mask-size));
     }
-    
+
     .tab-label-container[textoverflow][labeldirection=rtl],
     .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(rtl) {
       direction: rtl;
@@ -34,3 +34,13 @@
       margin-inline-end: 5.5px;
     }
 }
+
+%ifndef XP_MACOSX
+  #browser-bottombox {
+    background-color: var(--lwt-accent-color);
+  }
+  /* Ensure that status bar colored according to theme */
+  #status-bar {
+    appearance: auto !important;
+  }
+%endif
