[WFX-335] Add option to make status bar text more or less visible.

--- a/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
+++ b/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
@@ -35,6 +35,16 @@
     }
 }
 
+@media (-wfx-status-contrast-text) {
+  #status-text > #statuspanel-label {
+    color: var(--lwt-toolbar-field-color) !important;
+  }
+}
+
+#status-text > #statuspanel-label {
+  color: var(--arrowpanel-border-color);
+}
+
 %ifndef XP_MACOSX
   /* Ensure that bottom positioned tabs are colored according to theme */
   #browser-bottombox {
