Bug 1790616 - Use modern flexbox for the toolbox. r=dao,Gijs
The min-width / contain are as usual to allow elements to shrink under
their intrinsic size. You can only see its effects with relatively thin
windows (or with a very large number of tabs in the tabstrip case).

Differential Revision: https://phabricator.services.mozilla.com/D157216

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -86,6 +86,8 @@
   --lwt-brighttext-url-color: #00ddff;
 
   --ext-theme-background-transition: background-color 0.1s cubic-bezier(.17,.67,.83,.67);
+
+  -moz-box-layout: flex;
 }
 
 :root:-moz-lwtheme {
