Bug 1795363 - Make sure tab icon labels don't wrap. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D159423

--- a/browser/themes/shared/tabs.css
+++ b/browser/themes/shared/tabs.css
@@ -485,6 +485,7 @@
   /* Set height back to equivalent of parent's 1em based
      on the .tab-icon-sound having a reduced font-size */
   height: 1.3333em;
+  white-space: nowrap;
   margin: 0;
 }
 
