Bug 1795335 - Use `display: block` for search autocomplete popup. r=dao
The interaction of legacy flexbox (menupopup) with block is a bit nicer
than with flex.

I'm going to update menupopup with modern flexbox as soon as I fix all
the browser-chrome tests and the soft freeze is over, but this is
harmless and fixes the bug both with and without modern flexbox.

Remove -moz-box-flex: 0; from search-panel-tree since it's now useless
(there's no flexing to do since parent isn't a flex container).

Differential Revision: https://phabricator.services.mozilla.com/D159407

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -865,6 +865,9 @@
 
 #PopupSearchAutoComplete::part(content)  {
   --panel-padding: var(--panel-subview-body-padding);
+  /* NOTE(emilio): Once bug 1551637 is fixed we don't need to use block layout
+   * for this (though it doesn't really hurt) */
+  display: block;
 }
 
 @media not (prefers-contrast) {
