Bug 1795286 - Improve how bookmarks toolbar items flex. r=Gijs
This preserves the min-width behavior that XUL had. Note that this
depends on D159377

Differential Revision: https://phabricator.services.mozilla.com/D159396

--- a/browser/themes/shared/toolbarbuttons.css
+++ b/browser/themes/shared/toolbarbuttons.css
@@ -259,8 +259,10 @@ toolbarbutton.bookmark-item:not(.subviewbutton) {
   display: -moz-box !important;
 }
 
+#personal-bookmarks,
+#PlacesToolbar,
 #PlacesToolbarItems {
-  contain: inline-size;
+  min-width: 0;
 }
 
 #PlacesToolbarItems > .bookmark-item > .toolbarbutton-icon {
