Bug 1795892 - Fix sizing of richlistbox in popups. r=dao
Make sure autocomplete richlistbox contents don't influence the minimum popup
size, just like we did for arrowscrollbox in bug 1793662.

Move common overflow declarations to xul.css, and make remove the
arrowscrollbox rule, since it is now redundant (the arrowscrollbox also matches
::part(content)).

Differential Revision: https://phabricator.services.mozilla.com/D159599

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -644,6 +644,9 @@ wizardpage {
 
 richlistbox {
   -moz-box-orient: vertical;
+  overflow: auto;
+  min-width: 0;
+  min-height: 0;
 }
 
 /*********** findbar ************/
