--- a/toolkit/themes/windows/global/popup.css
+++ b/toolkit/themes/windows/global/popup.css
@@ -92,6 +92,8 @@ panel[type="arrow"] {
   border-radius: var(--panel-border-radius);
   border: 1px solid var(--panel-border-color);
   width: var(--panel-width);
+  min-width: 0;
+  min-height: 0;
 }
 
 :is(panel, menupopup)[orient=vertical]::part(content) {
