Bug 1795299 - Update Fx View logo container to full width with centered logo in narrower viewports r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D159595

--- a/browser/components/firefoxview/firefoxview.css
+++ b/browser/components/firefoxview/firefoxview.css
@@ -752,6 +752,14 @@ details[open] > .page-section-header > .twisty {
       "second"
       "third";
   }
+
+  body {
+    flex-flow: column;
+  }
+
+  #logo-container .brand-logo {
+    justify-content: center;
+  }
 }
 
 .synced-tab-a,
