--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -130,6 +130,8 @@ body {
 
 panelmultiview {
   -moz-box-align: start;
+  min-width: 0;
+  min-height: 0;
 }
 
 panelmultiview[transitioning] {
@@ -151,6 +153,8 @@ panelview[mainview] > .panel-header {
 
 .panel-viewcontainer {
   overflow: hidden;
+  min-width: 0;
+  min-height: 0;
 }
 
 .panel-viewcontainer[panelopen] {
